openshift/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: logistics
  labels:
    app: logistics
